--- a/src/Microsoft.Actions.Actors/Resources/SR.resx
+++ b/src/Microsoft.Actions.Actors/Resources/SR.resx
@@ -117,8 +117,101 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ActorStateAlreadyExists" xml:space="preserve">
+    <value>The actor state name '{0}' already exist.</value>
+  </data>
+  <data name="ErrorClientCallbackChannelNotFound" xml:space="preserve">
+    <value>CallBack Channel Not Found for this ClientId  : '{0}'</value>
+  </data>
+  <data name="ErrorDeserializationFailure" xml:space="preserve">
+    <value>Failed to deserialize and get remote exception  {0}</value>
+  </data>
+  <data name="ErrorEventInterfaceMustBeIActorEvents" xml:space="preserve">
+    <value>The type '{0} is not an actor events interface. The actor event interface must only derive from '{1}'.</value>
+  </data>
+  <data name="ErrorExceptionSerializationFailed1" xml:space="preserve">
+    <value>The exception {0} was unhandled on the service and could not be serialized for transferring to the client.</value>
+  </data>
+  <data name="ErrorExceptionSerializationFailed2" xml:space="preserve">
+    <value>Detailed Remote Exception Information: {0}</value>
+  </data>
+  <data name="ErrorHeaderAlreadyExists" xml:space="preserve">
+    <value>Header with name '{0}' already exists</value>
+  </data>
+  <data name="ErrorInterfaceNotImplemented" xml:space="preserve">
+    <value>Interface id '{0}' is not implemented by object '{1}'</value>
+  </data>
+  <data name="ErrorInvalidAddress" xml:space="preserve">
+    <value>Client is trying to connect to invalid address {0}.</value>
+  </data>
   <data name="ErrorMessageHTTP404" xml:space="preserve">
     <value>The requested resource/content/path does not exist on the server.</value>
+  </data>
+  <data name="ErrorMethodNotImplemented" xml:space="preserve">
+    <value>The object of type '{0}' does support the method '{1}'</value>
+  </data>
+  <data name="ErrorMethodNotSupportedInRemotingV1" xml:space="preserve">
+    <value>Method '{0}' of interface '{1}' is not supported in remoting V1.</value>
+  </data>
+  <data name="ErrorMissingMethod" xml:space="preserve">
+    <value>Method Id '{0}' for interface Id '{1}' not found in service implementation. If a new method is added to interface and client &amp; service are being upgraded at the same time, its possible that client got upgraded before the service. If a method is removed from the interface and client &amp; service are being upgraded at the same time, its possible that service got upgraded before the client. Addition or removal of methods to an interface should be performed as a phased upgrade.</value>
+  </data>
+  <data name="ErrorNamedActorStateNotFound" xml:space="preserve">
+    <value>Actor State with name {0} was not found.</value>
+  </data>
+  <data name="ErrorNoServiceInterfaceFound" xml:space="preserve">
+    <value>The service type '{0}' does not implement any service interfaces or one of the interfaces implemented is not a service interface. All interfaces(including its parent interface) implemented by service type must be service interface. A service interface is the one that ultimately derives from '{1}' type.</value>
+  </data>
+  <data name="ErrorNotAnActorInterface_DerivationCheck1" xml:space="preserve">
+    <value>The type '{0}' is not an actor interface as it does not derive from the interface '{1}'.</value>
+  </data>
+  <data name="ErrorNotAnActorInterface_DerivationCheck2" xml:space="preserve">
+    <value>The type '{0}' is not an actor interface as it derive from a non actor interface '{1}'. All actor interfaces must derive from '{2}'.</value>
+  </data>
+  <data name="ErrorNotAnActorInterface_InterfaceCheck" xml:space="preserve">
+    <value>The type '{0}' is not an Actor interface as it is not an interface.</value>
+  </data>
+  <data name="ErrorNotAServiceInterface_DerivationCheck1" xml:space="preserve">
+    <value>The type '{0}' is not an service interface as it does not derive from the interface '{1}'.</value>
+  </data>
+  <data name="ErrorNotAServiceInterface_DerivationCheck2" xml:space="preserve">
+    <value>The type '{0}' is not an service interface as it derive from a non service interface '{1}'. All service interfaces must derive from '{2}'.</value>
+  </data>
+  <data name="ErrorNotAServiceInterface_InterfaceCheck" xml:space="preserve">
+    <value>The type '{0}' is not a service interface as it is not an interface. </value>
+  </data>
+  <data name="ErrorRemotedInterfaceIsGeneric" xml:space="preserve">
+    <value>The  {0} interface '{1}' is using generics. Generic interfaces cannot be remoted.</value>
+  </data>
+  <data name="ErrorRemotedMethodCancellationTokenOutOfOrder" xml:space="preserve">
+    <value>Method '{1}' of {0} interface '{2}' has '{4}' parameter '{3}', and it is not the last parameter. If a method of the {0} interface has parameter of type '{4}' it must be the last parameter.</value>
+  </data>
+  <data name="ErrorRemotedMethodDoesNotReturnTask" xml:space="preserve">
+    <value>Method '{1}' of {0} interface '{2}' does not return Task or Task&lt;&gt;. The {0} interface methods must be async and must return either Task or Task&lt;&gt;.</value>
+  </data>
+  <data name="ErrorRemotedMethodDoesNotReturnVoid" xml:space="preserve">
+    <value>Method '{1}' of {0} interface '{2}' returns '{3}'. The {0} interface methods must have a return of type '{4}'.</value>
+  </data>
+  <data name="ErrorRemotedMethodHasGenerics" xml:space="preserve">
+    <value>Method '{1}' of {0} interface '{2}' is using generics. The {0} interface methods cannot use generics.</value>
+  </data>
+  <data name="ErrorRemotedMethodHasOutRefOptionalParameter" xml:space="preserve">
+    <value>Method '{1}' of {0} interface '{2}' has out/ref/optional parameter '{3}'. The {0} interface methods must not have out, ref or optional parameters.</value>
+  </data>
+  <data name="ErrorRemotedMethodHasVaArgParameter" xml:space="preserve">
+    <value>Method '{1}' of {0} interface '{2}' has variable length parameter '{3}'. The {0} interface methods must not have variable length parameters.</value>
+  </data>
+  <data name="ErrorRemotedMethodHasVaArgs" xml:space="preserve">
+    <value>Method '{1}' of {0} interface '{2}' is using a variable argument list. The {0} interface methods cannot have a variable argument list.</value>
+  </data>
+  <data name="ErrorRemotedMethodsIsOverloaded" xml:space="preserve">
+    <value>Method '{1}' of {0} interface '{2}' is overloaded. The {0} interface methods cannot be overloaded.</value>
+  </data>
+  <data name="Error_InvalidOperation" xml:space="preserve">
+    <value>Invalid Client for remoting.</value>
+  </data>
+  <data name="InvalidActorKind" xml:space="preserve">
+    <value>The method '{0}' is not valid for '{1}' ActorId.</value>
   </data>
   <data name="ServerErrorNoMeaningFulResponse" xml:space="preserve">
     <value>Server returned error while processing the request, but did not provide a meaningful error response. Response Error Code {0}</value>
