--- a/src/Microsoft.Actions.Actors/Resources/SR.resx
+++ b/src/Microsoft.Actions.Actors/Resources/SR.resx
@@ -225,4 +225,7 @@
   <data name="ErrorNotAnActor" xml:space="preserve">
     <value>The type '{0}' is not an Actor. An actor type must derive from '{1}'.</value>
   </data>
+  <data name="TimerArgumentOutOfRange" xml:space="preserve">
+    <value>TimeSpan TotalMilliseconds specified value must be between {0} and {1} </value>
+  </data>
 </root>
