--- a/src/Dapr.Actors.Analyzers/Dapr.Actors.Analyzers/Resources.resx
+++ b/src/Dapr.Actors.Analyzers/Dapr.Actors.Analyzers/Resources.resx
@@ -24,4 +24,22 @@
     <data name="DAPR4001MessageFormat" xml:space="preserve">
         <value>Actor timer method invocations require the named callback '{0}' method to exist on type '{1}'</value>
     </data>
+    <data name="DAPR4002Title" xml:space="preserve">
+        <value>The actor type is not registered with dependency injection</value>
+    </data>
+    <data name="DAPR4002MessageFormat" xml:space="preserve">
+        <value>The actor type '{0}' is not registered with dependency injection</value>
+    </data>
+    <data name="DAPR4003MessageFormat" xml:space="preserve">
+        <value>Set options.UseJsonSerialization to true to support interoperability with non-.NET actors</value>
+    </data>
+    <data name="DAPR4003Title" xml:space="preserve">
+        <value>Set options.UseJsonSerialization to true to support interoperability with non-.NET actors</value>
+    </data>
+    <data name="DAPR4004MessageFormat" xml:space="preserve">
+        <value>Call app.MapActorsHandlers to map endpoints for Dapr actors</value>
+    </data>
+    <data name="DAPR4004Title" xml:space="preserve">
+        <value>Call app.MapActorsHandlers to map endpoints for Dapr actors</value>
+    </data>
 </root>
