--- a/src/Dapr.Actors.Analyzers/Dapr.Actors.Analyzers/Resources.resx
+++ b/src/Dapr.Actors.Analyzers/Dapr.Actors.Analyzers/Resources.resx
@@ -25,10 +25,10 @@
         <value>Actor timer method invocations require the named callback '{0}' method to exist on type '{1}'</value>
     </data>
     <data name="DAPR1402Title" xml:space="preserve">
-        <value>The actor type is not registered with dependency injection</value>
+        <value>The actor type is not registered with the dependency injection provider</value>
     </data>
     <data name="DAPR1402MessageFormat" xml:space="preserve">
-        <value>The actor type '{0}' is not registered with dependency injection</value>
+        <value>The actor type '{0}' is not registered with the dependency injection provider</value>
     </data>
     <data name="DAPR1403MessageFormat" xml:space="preserve">
         <value>Set options.UseJsonSerialization to true to support interoperability with non-.NET actors</value>
